fix(sidebar): no margin on mobile (#89)

--- a/src/client/theme-default/styles/layout.css
+++ b/src/client/theme-default/styles/layout.css
@@ -91,6 +91,12 @@ main {
   }
 }
 
+@media screen and (max-width: 719px) {
+  main {
+    margin-left: 0;
+  }
+}
+
 a {
   text-decoration: none;
 }
